<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZRock</string>
    <string name="hello_world">Hello world!</string>
	
	<string name="action_menu_more">More</string>
	<string name="action_about">About</string>
	<string name="action_folder">Folder</string>
	<string name="action_info">Info</string>
	<string name="action_settings">Settings</string>
	<string name="action_exit">Exit</string>
	
</resources>
