<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ApplicationActivity">
	
    <item
        android:id="@+id/menu_folder"
        android:title="@string/action_folder"
        app:showAsAction="never"/>
		
    <item
        android:id="@+id/menu_item"
        android:title="@string/action_menu_more"
        app:showAsAction="never">
		<menu>
			
			<group android:id="@+id/item_menu">

				<item 
					android:id="@+id/action_about"
					android:icon="@drawable/info"
					android:title="@string/action_about"
					app:showAsAction="ifRoom"/>

				<item
					android:id="@+id/action_settings"
					android:icon="@drawable/ic_advanced_settings"
					android:title="@string/action_settings"
					app:showAsAction="ifRoom"/>

				<item
					android:id="@+id/action_exit"
					android:icon="@drawable/ic_logout_grey600_24dp"
					android:title="@string/action_exit"
					app:showAsAction="ifRoom"/>
			</group>
			
		</menu>

	</item>
</menu>
